Browser resets added alongside some re-factoring, though issue still remains with location title spacing

--- a/style.css
+++ b/style.css
@@ -1,23 +1,81 @@
+/*browser style reset*/
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-family: Helvetica;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/*setting content-box by default*/
+
+*, *::after, *::before {
+    box-sizing: content-box;
+}
+
+/*global rules*/
+
 * {
     font-family: Helvetica;
     font-size: 22px;
     color: seashell;
     background-color: black;
-    box-sizing: content-box;
     text-align: center;
     opacity: 0.9;
-}
-
-body {
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 70px;
 }
 
 h2 {
     font-size: 33px;
 }
 
+/*page rules*/
+
+.page-container {
+    height: 100%;
+    margin: 70px 20px 0px;
+    overflow: hidden;
+}
 
 /*header*/
 
@@ -27,26 +85,26 @@ h2 {
     left: 0px;
     width: 100%;
     border-bottom: 1px solid seashell;
-    max-height: 69px;
+    height: 69px;
     display: flex;
     z-index: 9999;
     opacity: 1;
 }
 
-.header ul,li {
+.header ul li {
     text-decoration: underline;
     display: inline;
-    justify-content: space-around;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 0px 10px;
 
 }
 
 .header img {
     margin-left: 10px;
-    max-height: 50px;
-    padding-top: 9px;
+    height: 50px;
+    margin: 9.5px 10px;
 }
+
+/*header navigation*/
 
 .nav-left {
     display: inline-flex;
@@ -59,13 +117,12 @@ h2 {
     display: inline-flex;
     justify-content: flex-end;
     align-items: center;
-    margin-right: 10px;
+    margin: 0px 10px;
 }
 
+/*hero section*/
 
-/*hero*/
-
-.hero {
+.hero-container {
     background-image: url(/resources/img-mission-background.jpg);
     background-position: center;
     height: 700px;
@@ -76,29 +133,24 @@ h2 {
     justify-content: center;
 }  
 
-.hero img {
-
-}
-
 .hero-banner {
     flex-grow: 1;
-    display: inline-flex;
     flex-wrap: wrap;
 }
 
 .hero-banner-topline {
-    display: inline-flex;
     justify-content: center;
     align-items: center;
     flex-grow: 1;
     flex-basis: 100%;
+    padding: 10px;
 }
 
 .hero-banner-bottomline {
-    display: inline-flex;
     justify-content: center;
     align-items: center;
     flex-grow: 1;
+    padding: 10px;
 }
 
 /*Tea of the Month section*/
@@ -106,25 +158,34 @@ h2 {
 .image-gallery {
     display: flex;
     max-width: 1000px;
-    margin: 0 auto; 
+    margin: 0 auto 70px auto; 
     justify-content: center;
     flex-wrap: wrap;
     align-items: center;
-
 }
 
-.image-gallery-image, .image-gallery-image-row2 {
+.image-gallery-image {
     padding: 10px;
     flex-grow: 1;
 }
 
-.image-gallery-image img, .image-gallery-image-row2 img {
+.image-gallery-image img {
     max-width: 300px;
-    max-height: 200px;
+    max-height: 200px; 
 }
 
-h4 {
+.image-gallery-image h4 {
     margin: 10px 10px;
+}
+
+.image-gallery h2 {
+    flex-basis: 100%;
+    padding: 50px 0px 30px 0px;
+}
+
+.image-gallery p {
+    flex-basis: 100%;
+    padding: 0px 0px 30px 0px;
 }
 
 /*Locations*/
@@ -139,13 +200,14 @@ h4 {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .locations-title {
     flex-grow: 1;
     flex-basis: inherit;
     background-color: transparent;
+    margin: 2% 0px;
 }
 
 .locations-title h2 {
@@ -161,6 +223,12 @@ h4 {
 
 .location-card p {
     line-height: 2.5;
+    padding: 0px 0px 30px 0px;
+}
+
+.location-card h3 {
+    padding: 20px 0px 20px 0px;
+    font-size: 22px;
 }
 
 .spacer {
@@ -183,15 +251,12 @@ h4 {
 
 /*footer*/
 
-footer {
-}
-
 .footer-container {
-    height: 200px; 
-    display: inline-block;
-    vertical-align: middle;
+    margin: 20px auto;
+    height: 200px;
 }
 
 .copyright {
     text-align: left;
+    padding: 0px 0px 20px 20px;
 }
